# launcher

./: CLAUDE.md  nuxt.config.ts  package-lock.json  package.json
.github/workflows/: build-launcher.yml
app/: app.vue  types.d.ts
app/assets/css/: main.css
app/components/: BriefServerInfo.vue  ConnectionInput.vue  ConsoleLog.vue  TrustCertModal.vue
app/composables/: useConfirmRejectModal.ts  useConsole.ts  useConsoleTheme.ts
app/pages/: index.vue
app/pages/connections/: [id].vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: console.json  default.json
src-tauri/src/: connection.rs  console.rs  main.rs  tls.rs  webstart.rs
