[package]
name = "launcher"
version = "2.1.0"
description = "An Open Integration Engine Admin Client Launcher"
authors = ["kiran@sereen.io"]
homepage = "https://sereen.io"
license = "MPL-2.0"
repository = "https://github.com/kayyagari/ballista"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# the above are added and required by Tauri
roxmltree = "0.18.1"
# native-tls is kept for tauri-plugin-http's danger settings (the connectivity
# probe uses acceptInvalidHostnames, which reqwest only supports on native-tls);
# rustls-tls-manual-roots is added so our pinned clients can use a custom verifier.
reqwest = { version = "0.12.28", features = ["blocking", "native-tls-vendored", "rustls-tls-manual-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
x509-parser = "0.16"
anyhow = "1.0.102"
sha2 = "0.10.9"
base64 = "0.22"
log = "0.4"
uuid = {version = "1.21.0", features = ["v4", "fast-rng"] }
home = "0.5.12"
rustc-hash = "2.1.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-http = { version = "2.5.7", features = ["dangerous-settings"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = "line-tables-only"

